# files-api

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  docker-compose.locust.yaml  docker-compose.yaml  github_oidc_infra.py  infra.py  init.sh  openapi.json  pyproject.toml  run
.github/workflows/: build-test-publish.yaml
cdk-infra/: README.md  app.py  pyproject.toml  run
cdk-infra/src/files_api_cdk/: __init__.py  files_api_cdk_stack.py
docs/: Docker-Volumes-and-Virtual-Environments.md  README.md  Secrets-Manager-and-SSM-Parameter-Store.md  Secrets-Manager.md
docs/aws/: API-Gateway.md  CDK-Asset-Hash.md  CDK-CI-CD-Github-Actions.md  CDK-ContextValues-and-Parameters.md
docs/old-cdk-scripts/: infra_ssm_parameter.py
files-api/: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.locust.yaml  docker-compose.yaml  openapi.json  pyproject.toml  run.sh
files-api/scripts/: generate-openapi-simple.py  generate-openapi.py  locustfile.py  update_dashboard.py
files-api/src/files_api/: __init__.py  aws_lambda_handler.py  generate_files.py  main.py  route_handler.py  routes.py  schemas.py  settings.py
files-api/src/files_api/monitoring/: logger.py  metrics.py  tracer.py
files-api/src/files_api/s3/: __init__.py  delete_objects.py  read_objects.py  write_objects.py
files-api/tests/: conftest.py
files-api/tests/fixtures/: api_client.py  mocked_aws.py  mocked_openai-old.py  mocked_openai.py
files-api/tests/mocks/: openai_fastapi_mock_app.py
files-api/tests/unit_tests/: __init__.py  test__routes_error_cases.py  test__routes_happy_path.py  test__routes_openai_error_cases.py  test__routes_openai_happy_path.py
files-api/tests/unit_tests/s3/: test__delete_objects.py  test__read_objects.py  test__write_objects.py
scripts/: README.md  generate-openapi.py  locustfile.py  try_client.py  update_dashboard.py
src/files_api/: aws_lambda_handler.py  errors.py  main.py  route_handler.py  routes.py  settings.py  utils.py
src/files_api/generate_files/: __init__.py  gemini.py  openai.py
src/files_api/monitoring/: logger.py  metrics.py  tracer.py
src/files_api/s3/: delete_objects.py  write_objects.py
tests/: __init__.py  conftest.py  consts.py  utils.py
tests/fixtures/: api_client.py  mocked_aws.py
tests/mocks/: openai_fastapi_mock_app.py
tests/unit_tests/: test__routes_openai_happy_path.py
tests/unit_tests/s3/: test__delete_objects.py  test__read_objects.py  test__write_objects.py
