[project]
name = "files-api"
version = "0.1.5"
description = "Files API to upload and download files from S3 using FastAPI."
readme = "README.md"
authors = [
    { name = "avr2002", email = "avr13405@gmail.com" }
]
license = { text="MIT" }
requires-python = ">=3.12"
dependencies = [
    "aws-embedded-metrics>=3.3.1",
    "aws-xray-sdk>=2.15.0",
    "boto3>=1.42.21",
    "email-validator>=2.3.0",
    "fastapi>=0.128.0",
    "loguru>=0.7.3",
    "openai>=2.14.0",
    "pydantic-settings>=2.12.0",
    "python-multipart>=0.0.21",
    "requests>=2.32.5",
]

[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
aws-lambda = [
    "mangum>=0.20.0",
]
docker = [
    "uvicorn>=0.40.0",
]
infra = [
    "aws-cdk-lib>=2.233.0",
    "constructs>=10.4.4",
]
notebook = [
    "ipykernel>=7.1.0",
    "jupyter>=1.1.1",
    "rich>=14.2.0",
]
static-code-qa = [
    "pre-commit>=4.5.1",
    "ruff>=0.14.10",
]
stubs = [
    "boto3-stubs[cloudwatch,logs,s3]>=1.42.21",
]
test = [
    "locust>=2.43.0",
    "moto[s3]>=5.1.19",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "uvicorn>=0.40.0",
]

# https://github.com/astral-sh/ruff?tab=readme-ov-file#configuration
[tool.ruff]
line-length = 119
extend-include = ["*.ipynb"]

# https://docs.astral.sh/ruff/rules/
[tool.ruff.lint]
extend-select = [
    # pycodestyle errors
    "E",
    # flake8-bugbear
    "B",
    # pylint equivalent rules
    "PL",
    # isort
    "I",
    # pydocstyle for docstrings
    "D",
    # pep8-naming
    "N",
]

ignore = [
    "E501",  # line-too-long
    "F401",  # unused-import
    "W605",  # invalid-escape-sequence
    "W291",  # trailing-whitespace"
    "UP032", # Use f-string instead of format call
    # pydocstyle - https://docs.astral.sh/ruff/rules/#pydocstyle-d
    "D103", # undocumented-public-function
    "D107", # undocumented-public-init
    "D203", # incorrect-blank-line-before-class
    "D100", # undocumented-public-module
    "D212", # multi-line-summary-first-line
    "D400", # first line should end with a period
    "D401", # first line should be in imperative mood
    "D415", # First line should end with a period, question mark, or exclamation point
    # https://docs.astral.sh/ruff/rules/#pylint-pl
    "PLR2004", # Magic value used in comparison, consider replacing `2` with a constant variable
    "PLC0415",  # import should be at the top-level of a file
]

[tool.ruff.lint.isort]
# force-single-line = false
combine-as-imports = true
# force-wrap-aliases = false
# split-on-trailing-comma = false

# https://docs.astral.sh/ruff/rules/#mccabe-c90
[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.pytest.ini_options]
markers = [
  "slow: marks tests as slow (deselect with '-m \"not slow\"')"
]
pythonpath = [ "." ]
addopts = [
  "--junitxml=test-reports/report.xml",
  "--cov=src",
  "--cov-fail-under=40",
  "--cov-report=xml",
  "--cov-report=html",
  "--cov-report=term"
]

[tool.coverage.paths]
source = [ "src/" ]

[tool.coverage.report]
exclude_also = [
  "pragma: no cover",
  "if False",
  "def __repr__",
  "if self.debug",
  "raise AssertionError",
  "raise NotImplementedError",
  "raise MemoryError",
  "except DistributionNotFound",
  "except ImportError",
  "@abc.abstractmethod",
  "if 0:",
  "if __name__ == .__main__.:",
  "if typing.TYPE_CHECKING:",
  "if TYPE_CHECKING:"
]
omit = [ "tests/artifacts/*", "src/*_flow.py" ]
show_missing = true

[tool.coverage.run]
branch = true
parallel = true
data_file = "test-reports/.coverage"

[tool.coverage.xml]
output = "test-reports/coverage.xml"

[tool.coverage.html]
directory = "test-reports/htmlcov"

[tool.coverage.json]
output = "test-reports/coverage.json"
