[project]
name = "files-api-cdk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "avr2002", email = "avr13405@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "aws-cdk-lib==2.186.0",
    "constructs>=10.0.0,<11.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
